Fix spacing errors, dissappear when scrolldown in gallery view

--- a/src/components/thumbNailGallery/thumbNailGallery.scss
+++ b/src/components/thumbNailGallery/thumbNailGallery.scss
@@ -3,6 +3,7 @@
 .thumbNailContainer {
   box-sizing: border-box;
   padding-top: 40px;
+  margin-bottom: 60px;
   height: 100%;
   width: 100%;
   display: flex;
@@ -15,9 +16,11 @@
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     justify-items: center;
     grid-gap: 20px;
+    margin-bottom: 0;
   }
 
   @media (min-width: $break-HiDPI) {
     padding: 10%;
+    margin-bottom: 0;
   }
 }
