--- a/src/pages/photography/photography.scss
+++ b/src/pages/photography/photography.scss
@@ -3,7 +3,7 @@
 .photoSplash-body {
   box-sizing: border-box;
   padding-top: 20px;
-  height: 95vh;
+  height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
