--- a/src/pages/resume/resume-styles.scss
+++ b/src/pages/resume/resume-styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  margin-bottom: 100px;
   
   @media (min-width: $desk-break) {
     padding-left: 10%;
